# vrooum

./: CMakeLists.txt  README.md  createproject.sh
GrandPrix2023_4.0.3/: GrandPrix  GrandPrix.pro  Makefile  README  download_tracks.sh  res.qrc  stderr_driver_1.txt
GrandPrix2023_4.0.3/.ui/: ui_finishdialog.h  ui_gpcontrolview.h  ui_gpdriverselector.h  ui_gpmapselector.h  ui_gpmapview.h  ui_gpprogression.h  ui_grandprix.h  ui_stderrview.h
GrandPrix2023_4.0.3/Picole_Nationale/: Makefile  droitAuBut  droitAuBut.c  droitAuBut.h  follow_line.c  follow_line.h  queue.c  queue.h  stack.c  stack.h
GrandPrix2023_4.0.3/drivers/: PicoleNationale  droitAuBut
GrandPrix2023_4.0.3/follow_line/: Makefile  main.c
GrandPrix2023_4.0.3/include/: car.h  finishdialog.h  gpcontrol.h  gpcontrolview.h  gpdriverselector.h  gpmapselector.h  gpmapview.h  gpprogression.h  grandprix.h  headless.h  logger.h  stderrview.h
GrandPrix2023_4.0.3/src/: car.cpp  finishdialog.cpp  gpcontrol.cpp  gpcontrolview.cpp  gpdriverselector.cpp  gpmapselector.cpp  gpmapview.cpp  gpprogression.cpp  grandprix.cpp  headless.cpp  logger.cpp  main.cpp  stderrview.cpp
GrandPrix2023_4.0.3/test_pilot/: First-Driver.c  Makefile  droitAuBut.c  droitAuBut.h  follow_line.h  test_pilot.c
GrandPrix2023_4.0.3/test_pilot_JPS/: Makefile  droitAuBut  droitAuBut.c  droitAuBut.h  test_pilot.c
GrandPrix2023_4.0.3/test_pilot_copy/: droitAuBut  droitAuBut.c  droitAuBut.h  test_pilot.c
GrandPrix2023_4.0.3/tracks/: demitour.txt  demitour2.txt  f-Zero_Crossroad_Circuit.txt  f-Zero_Crossroad_Circuit_mur.txt  f-Zero_Death_Wind.txt  f-Zero_Mute_City.txt  (+70 more)
PicoleNationale_RavixJantet/: AUTHORS.txt  INSTALL.txt  Makefile  README.md
(+27 files in other folders)
